--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "istanbul-lib-hook": "^1.0.5",
-    "react": "~15.5.4",
+    "react": "^16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0"
