--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "manager",
-  "version": "0.0.2",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "istanbul-lib-hook": "^1.0.5",
-    "react": "^16.0.0-alpha.6",
-    "react-native": "0.43.3",
-    "react-native-cli": "^2.0.1",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0"
-  },
-  "devDependencies": {
-    "babel-jest": "19.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "19.0.2",
-    "react-test-renderer": "~15.5.4"
-  },
-  "jest": {
-    "preset": "react-native"
+    "eslint-config-rallycoding": "^3.1.0",
+    "firebase": "^3.4.1",
+    "lodash": "^4.16.4",
+    "react": "15.5.4",
+    "react-native": "0.34.1",
+    "react-native-communications": "^2.1.3",
+    "react-native-router-flux": "^3.35.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
