--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "eslint-config-rallycoding": "^3.1.0",
     "firebase": "^3.4.1",
     "lodash": "^4.16.4",
-    "react": "^15.5.4",
-    "react-native": "0.34.1",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0",
     "react-native-communications": "^2.1.3",
     "react-native-router-flux": "3.38.0",
     "react-redux": "^4.4.5",
