--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "eslint-config-rallycoding": "^3.1.0",
     "firebase": "^3.4.1",
     "lodash": "^4.16.4",
-    "react": "16.0.0-alpha.6",
+    "react": "^16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-communications": "^2.1.3",
     "react-native-router-flux": "3.38.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
+    "react-redux": "^4.4.8",
+    "redux": "^3.7.1",
     "redux-thunk": "^2.1.0"
   }
 }
