--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-redux": "^4.4.8",
     "redux": "^3.7.1",
     "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0"
   }
 }
